Problem painting an image

--- a/Juego/nbproject/private/private.properties
+++ b/Juego/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\sebastian\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=C:\\Users\\Sebastian-PC\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
